--- a/blog/package.json
+++ b/blog/package.json
@@ -12,10 +12,11 @@
     "antd": "^4.4.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "highlight.js": "^10.1.1",
     "markdown-navbar": "^1.4.2",
+    "marked": "^1.1.0",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-markdown": "^4.3.1"
+    "react-dom": "16.13.1"
   }
 }
